--- a/public/src/assets/css/style.css
+++ b/public/src/assets/css/style.css
@@ -2237,6 +2237,16 @@ h6 {
     margin-left: auto !important;
     margin-right: auto !important;
   }
+
+  .footer-bottom {
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+  }
+
+  .footer-bottom-links {
+    justify-content: center;
+  }
 }
 
 @media (min-width: 1086px) {
